# parallel-in-pio-dma

./: CMakeLists.txt  parallel_in.c  parallel_in.pio  readme.md
